# apkthumb-kf5

./: CMakeLists.txt  README.md  apkthumb.cpp  apkthumb.desktop  apkthumb.h
test/: .directory  CMakeLists.txt  apkthumbtest.cpp
